# gazpar2mqtt

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  gitversion.yaml  pyproject.template.toml  pyproject.toml  repository.yaml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml  create-release.yaml  publish-to-dockerhub.yaml
.github/workflows/git-tag/: action.yaml
.github/workflows/publish-to-dockerhub/: action.yaml
.github/workflows/python-lint/: action.yaml
.github/workflows/python-test/: action.yaml
addons/gazpar2mqtt/: DOCS.md  Dockerfile  README.md  build.yaml  build.yaml.template  config.yaml  config.yaml.template
addons/gazpar2mqtt/rootfs/app/: run.sh
addons/gazpar2mqtt/rootfs/app/config/: configuration.template.yaml  secrets.template.yaml
addons/gazpar2mqtt/rootfs/etc/services.d/gazpar2mqtt/: run
config/: configuration.template.yaml  configuration.yaml  secrets.template.yaml
docker/: Dockerfile  docker-compose.yaml  entrypoint.sh
gazpar2mqtt/: __init__.py  __main__.py  bridge.py  config_utils.py  gazpar.py  gazpar2mqtt.py  homeassistant.py  version.py
tests/: test_bridge.py  test_gazpar.py  test_gazpar2mqtt.py  test_homeassistant.py  test_main.py
tests/config/: configuration.yaml  secrets.template.yaml
tests/containers/: docker-compose.yaml
tests/containers/config/: mosquitto.conf
