[project]
name = "gazpar2mqtt"
version = "0.3.0b11"
description = "Gateway that read GrDF meter data and publish them on MQTT queue"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Stéphane Senart" }
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pygazpar>=1.3.0b4",
    "paho-mqtt>=2.1.0",
    "pyyaml>=6.0.2",
    "jinja2>=3.1.5"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
